syntax = "proto3";

package shortener;

// Handles all create, read, update, and delete functionality for links
service Shortener {
  rpc Create(CreateLinkRequest) returns (ShortenerResponse) {};
  rpc Read(ReadLinkRequest) returns (ShortenerResponse) {};
  rpc Update(UpdateLinkRequest) returns (ShortenerResponse) {};
  rpc Delete(DeleteLinkRequest) returns (ShortenerResponse) {};
}

// A generic response for all shortener service rpcs
message ShortenerResponse {
  optional Link link = 1;
  LinkResponseStatus status = 2;
}

// A generic status representing the status of the request itself
enum LinkResponseStatus {
  UNKNOWN = 0;
  CREATED = 1;
  FOUND = 2;
  UPDATED = 3;
  DELETED = 4;
}

// A generic message containing information about a shortlink
message Link {
  string id = 1;
  string created_at = 2;
  string target_url = 3;
};

// A request for creating a shortlink for the target url
message CreateLinkRequest { string target_url = 1; };

// A request to get the full link for a shortlink based on an ID
message ReadLinkRequest { string id = 1; }

// A request to update a link, mainly it's target url
message UpdateLinkRequest { string target_url = 1; }

// A request to remove a link
message DeleteLinkRequest { string id = 1; }